--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Peijin Sun's Homepage
+page-top-title: Peijin Sun
+top-section-bg-text: Urban Regional Planning
+home-subtitle: Peijin Sun&ensp;|&ensp;孙佩锦
+copyright-text: '&copy; Peijin Sun 2024-2025. All Rights Reserved.'
