--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Peijin Sun's Homepage
 page-top-title: Peijin Sun
-top-section-bg-text: Urban Regional Planning
+# top-section-bg-text: Urban Regional Planning
 home-subtitle: Peijin Sun&ensp;|&ensp;孙佩锦
 copyright-text: '&copy; Peijin Sun 2024-2025. All Rights Reserved.'
